k8s/overlays/local/grafana/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-local
  labels:
    istio-injection: enabled
