k8s/overlays/local/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-local
  labels:
    environment: local
    service: grafana
    project: solidity-security
