k8s/overlays/local/grafana/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: grafana-ingress-policy
  namespace: grafana-local
spec:
  selector:
    matchLabels:
      app: grafana
  mtls:
    mode: PERMISSIVE
