k8s/overlays/local/grafana/destination-rules.yaml
---
# DestinationRule for Prometheus service in mesh
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus-mesh
  namespace: grafana-local
spec:
  host: infrastructure-crds-kube-p-prometheus.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---
# DestinationRule for Jaeger tracing service
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jaeger-mesh
  namespace: grafana-local
spec:
  host: tracing.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
